--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ GEMINI_API_KEY=your_gemini_api_key
 # Monetization
 STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+DODO_PAYMENTS_API_KEY=your_dodo_payments_api_key
+DODO_PAYMENTS_WEBHOOK_KEY=your_dodo_payments_webhook_key
